# mathrs

./: Cargo.toml  LICENSE.md  README.md
src/: constants.rs  hyperbolic.rs  lib.rs  matrix.rs  point.rs  syntax_sugar.rs  tests.rs  trigonometry.rs  vector.rs  vector3d.rs
