[package]
name = "mathrs"
version = "0.0.2"

authors = ["Pedro Cabral <pedro@cabral.mat.br>"]

description = "Scientific, numeric and symbolic mathematical crate for computing with Rust."

homepage = "https://mathrs.github.io/"
repository = "https://github.com/mathrs/mathrs"

license = "MIT"

readme = "README.md"

edition = "2018"