[package]
name = "mathrs"
version = "0.0.4"

authors = ["Pedro Cabral <pedro@cabral.mat.br>"]
keywords = ["scientific", "numeric", "symbolic", "math", "rust"]

description = "Scientific, numeric and symbolic mathematical crate for computing with Rust."

homepage = "https://mathrs.github.io/"
repository = "https://github.com/mathrs/mathrs"
documentation = "https://docs.rs/mathrs"

license = "MIT"

readme = "README.md"

edition = "2018"